# cpp_self_registering_class

./: CMakeLists.txt  base_lib.cc  base_lib.h  foo.cc  main.cc  test.cc  test_script.sh
